<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nächstes Gehalt</string>
    <string name="app_title">Gehaltsrechner</string>
    <string name="label_next_salary">Nächstes Gehalt in</string>
    <string name="label_payday_today">Heute ist Zahltag!</string>
    <string name="label_upcoming">Weitere Gehaltstermine</string>
    <string name="label_days">Tage</string>
    <string name="label_hours">Std</string>
    <string name="label_minutes">Min</string>
    <string name="label_seconds">Sek</string>
</resources>
